# Akane

./: .gitignore  README.md  akane.pm2config.json  bot.py  launcher.py  pyproject.toml
cogs/: admin.py  akane.py  config.py  external.py  fun.py  help.py  lewd.py  manga.py  meta.py  mod.py  nihongo.py  reactionroles.py  reddit.py  reminders.py  rng.py  rtfx.py  selfbot.py  snipe.py  stars.py  stats.py  tags.py  time.py  todo.py  token.py  twitch.py  urban.py  welcome.py
utils/: cache.py  checks.py  context.py  converters.py  currency_codes.json  db.py  formats.py  fuzzy.py  lang.py  paginator.py  time.py
